fix issue with z index, landing not visible

--- a/src/index.css
+++ b/src/index.css
@@ -33,7 +33,7 @@ body {
 }
 
 .cta-btn {
-  @apply flex items-center justify-center space-x-2 rounded-md border border-white px-6 py-3 transition-transform hover:scale-105;
+  @apply flex h-12 items-center justify-center space-x-2 rounded-md border border-white px-6 py-3 transition-transform hover:scale-105;
 }
 
 .overlap-image {
